--- a/zoom.css
+++ b/zoom.css
@@ -40,7 +40,7 @@ p {
     text-align: left;
     margin-left: 10vw;
     margin-top: 6.5vw;
-    line-height: 1.5vw;
+    line-height: 25px;
 }
 
 .hero {
@@ -185,7 +185,6 @@ footer {
 .menu .fa {
     font-size: 16px;
     color: black;
-    
 }
   
 .menu .fa:hover {
